# detecterreur

./: README.md  emissions.csv  emissions.csv.bak  main.py  pyproject.toml
evaluating/: 10_PL_M1.xml  13_PL_L3.xml  9_CHN_L3.xml  comparison_results.csv  corrector_de.py  corrector_dl.py  dl_corrector.py  emissions_from_test.csv  final_merged_errors.json  get_annotated_json_from_xml.py  produce_auto_eval_results.py  reference.xml  report_categories.txt  report_macrocategories.txt  test_raw.txt
feedback/: RAG_experiment2.ipynb  mistral_3b.py  mistral_7b.py  rag_FDIA.py  rag_Mistral.py  rag_experiment.py  rag_mistral_3b.py  rag_mistral_7b.py  rag_qwen.py
feedback/rules/: rules_cleaned.csv  rules_test2.csv
src/detecterreur/: orchestrator.py  validator.py
src/detecterreur.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testing/: simple_test.py  test_orchestrator.py
testing/final/: evaluate_detectors.py  generate_imbalance_chart.py  parsed_output_russo.json  parsed_output_sino.json
testing/form/: form_agglutination.py  form_agglutination.txt  form_case.py  form_case.txt  form_diacritic.py  form_diacritic.txt
testing/grammar/: grammar_agreement.py  grammar_agreement.txt  grammar_conjugation.py  grammar_conjugation.txt  grammar_euphonic.py  grammar_euphonic.txt
testing/letter/: letter_insertion.py  letter_insertion.txt  letter_missing.py  letter_missing.txt  letter_order.py  letter_order.txt  letter_replacement.py  letter_substitution.py  letter_substitution.txt
testing/punctuation/: punctuation.py  punctuation.txt
(+36 files in other folders)
